5/02/2020: <completed> Published app with reproductive number included and organized the methods tabs in tabset
5/03/2020: <completed> QI issues identified with onset dates after report date. Also increased size of the shiny app from 1G to 2G
5/03/2020: <completed> fixed a few typos.
5/07/2020: <completed> Updated Rt graph to say date opposed to tnk.
5/11/2020: <completed> Major data structure update on the hub site had to redesign code and deploy shiny application.
5/11/2020: <completed> Add new Mandate to mandates figure.
5/11/2020: <completed> Update Rt graph with new numbers for mean serial interval.
5/11/2020: <completed> Added link on Rt graph to external site for comp.
5/18/2020: <completed> Added Health Mandate 18
5/27/2020: <completed> Added Health Mandate 16 - rescinded
5/28/2020: <completed> Updated the API link to the table used to calculate max data. The prior table used wasn't updating.
6/13/2020: <completed> Updated text on sidebar and expanded the y-axis on the mandates tab graphic
6/20/2020: <Completed Phase I> Need to update models that are performing poorly to account for lag in specification of onset date and delay in testing
7/07/2020: <completed> Updated Reff (Rt) calculation to a 14-day sliding window
7/28/2020: <completed> Updated max_date as prior dataset didn't update

Major version update:
8/07/2020: <completed> Included selector for in/out of state residents for model, epi-curve, and Rt values
8/07/2020: <completed> Added selector for region - Rt plot
8/07/2020: <completed> Added moving average rate plot with selectors
8/07/2020: <completed> Removed mandates graphic
8/14/2020: <completed> Added auto update feature to make sure data is refreshed
8/17/2020: <TEMP> Modified API until the geojson API delay is reduced!
8/19/2020: <TEMP> Roll back to use of GeoJSON due to error with geoservice code
11/27/2020: Major update, read methods sections to see all changes and updates.