@@ -37,3 +37,6 @@ Major version update:
 8/17/2020: <TEMP> Modified API until the geojson API delay is reduced!
 8/19/2020: <TEMP> Roll back to use of GeoJSON due to error with geoservice code
 11/27/2020: Major update, read methods sections to see all changes and updates.
+
+Version update:
+6/4/2021: <completed> Update URL to new table and elements
